--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Nama_NIM</title>
+    <title>Diky Dwicandra_2109106038</title>
 </head>
 <body>
     <table border="1" width="80%">
