--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </td>
             <td>
                 <form action="">
-                    <input type="text" name="" id=""> Kg
+                    <input type="text" name="" id=""><span>Kg</span>
                 </form>
             </td>
         </tr>
