--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
+<!--NAMA = Diky Dwicandra
+    NIM = 2109106038
+    KELAS = A2 2021
+--> -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Diky Dwicandra_2109106038</title>
 </head>
 <body>
-    <table border="1" width="80%">
+    <table border="1" width="70%">
         <tr align="center">
             <td width="45%"><b>E-Ticket / <i>E-Tiket</i></b></td>
-            <td colspan="3" rowspan="2"><img src="https://1.bp.blogspot.com/-cBfGfTYoBlY/YOMgGumda6I/AAAAAAAAIuM/Q-bnZSnnUBEFjJihQVK0ZMnJAqFjpL8QgCLcBGAsYHQ/s1453/logo-traveloka.png" alt="gambar traveloka" width="50%" ></td>
+            <td colspan="3" rowspan="2"><img src="https://1.bp.blogspot.com/-cBfGfTYoBlY/YOMgGumda6I/AAAAAAAAIuM/Q-bnZSnnUBEFjJihQVK0ZMnJAqFjpL8QgCLcBGAsYHQ/s1453/logo-traveloka.png" alt="gambar traveloka" width="55%" ></td>
         </tr>
         <tr align="center">
             <td><b>Flight / <i>Penerbangan Landas</b></i></td>
@@ -47,7 +52,7 @@
         </tr>
         <tr>
             <td>No.</td>
-            <td>Passenger(s)</td>
+            <td width="40">Passenger(s)</td>
             <td>Ticket Type</td>
             <td>Baggage</td>
         </tr>
@@ -58,9 +63,8 @@
                 <td><i>Bagasi</i></td>
         </tr>
         <tr>
-       
             <td>1.</td>
-            <td width="30%">Diky Dwicandra</td>
+            <td>Diky Dwicandra</td>
             <td>
                 <form action="">
                     <input type="radio" value=""> Dewasa <br>
@@ -69,22 +73,22 @@
             </td>
             <td>
                 <form action="">
-                    <input type="text" name="" id=""><span>Kg</span>
+                    <input type="number" name="" id=""> Kg
                 </form>
             </td>
         </tr>
         <th colspan="4">Nama Pemesan</th>
         <tr>
-            <td colspan="2" width="50%">
+            <td colspan="2" width="40%">
                 <p>Nama</p>
                 <p>NIM</p>
                 <p>No Telp</p>
                 <p>Praktikum Web</p>
             </td>
-            <td colspan="2" width="60%">
+            <td colspan="2" width="40%">
                 <p>Diky Dwicandra</p>
                 <p>2109106038</p>
-                <p>082252848918</p>
+                <p>082252848916</p>
                 <p><a href="https://classroom.google.com/u/0/c/NTI3MzE4MTg1ODc2/a/NTQ3Njc1NTYwNDI4/details">
                     Postest 1 Web
                 </a></p>
